--- a/roll-the-dice/css/style.css
+++ b/roll-the-dice/css/style.css
@@ -5,14 +5,65 @@ body {
   background-color: #202020;
 }
 
+/* The Modal (background) */
+.modal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #202020;
+  margin: 5% auto;
+  /* 5% from the top and centered */
+  padding: 20px;
+  border: 1px solid snow;
+  width: 75%;
+  /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-img {
+  width: 100%;
+}
+
 .main-container {
-  position: relative;
   z-index: 100;
 }
 
 #gameboard {
   margin: 0 auto;
-  height: 100px;
+  height: 70px;
   text-align: center;
   font-size: 65px;
   background-color: rgba(32, 32, 32, 0);
@@ -124,7 +175,7 @@ p {
 
 @media only screen and (max-width: 525px) {
   .besked-div {
-    height: 50px;
+    height: 40px;
   }
   .score-div {
     height: 50px;
@@ -142,13 +193,13 @@ p {
 
 @media only screen and (max-width: 370px) {
   .besked-div {
-    height: 45px;
+    height: 35px;
   }
   .score-div {
-    height: 45px;
+    height: 35px;
   }
   .tries-div {
-    height: 45px;
+    height: 35px;
   }
   p {
     font-size: 20px;
@@ -160,7 +211,7 @@ p {
 
 .morty {
   width: 16%;
-  position: absolute;
+  position: fixed;
   right: 0;
   bottom: 0;
   z-index: -1;
@@ -169,10 +220,76 @@ p {
 
 .rick {
   width: 16%;
-  position: absolute;
+  position: fixed;
   left: 0;
   bottom: 0;
   z-index: -1;
   padding: 0 5px;
+}
+
+/* Popup container */
+.popup {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* The actual popup (appears on top) */
+.popup .popuptext {
+  visibility: hidden;
+  width: 300px;
+  background-color: #202020;
+  border: 1px solid #28b0ff;
+  color: #28b0ff;
+  text-align: center;
+  font-size: 20px;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: -60px;
+  margin-left: -80px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #4ebeff transparent transparent transparent;
+}
+
+/* Toggle this class when clicking on the popup container (hide and show the popup) */
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 /*# sourceMappingURL=style.css.map */
