--- a/roll-the-dice/css/style.scss
+++ b/roll-the-dice/css/style.scss
@@ -4,13 +4,54 @@ body{
     font-family: 'Courier New', Courier, monospace;
     background-color: rgb(32, 32, 32);
 }
+//modal
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: rgb(32, 32, 32);
+    margin: 5% auto; /* 5% from the top and centered */
+    padding: 20px;
+    border: 1px solid snow;
+    width: 75%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  .modal-img {
+      width: 100%;
+  }
+//modal
 .main-container{
-    position: relative;
     z-index: 100;
 }
 #gameboard {
     margin: 0 auto;
-    height: 100px;
+    height: 70px;
     text-align: center;
     font-size: 65px;
     background-color: rgba(32, 32, 32, 0);
@@ -106,7 +147,7 @@ p{
 }
 @media only screen and (max-width: 525px) {
     .besked-div{
-        height: 50px;
+        height: 40px;
     }
     .score-div{
         height: 50px;
@@ -123,13 +164,13 @@ p{
 }
 @media only screen and (max-width: 370px) {
     .besked-div{
-        height: 45px;
+        height: 35px;
     }
     .score-div{
-        height: 45px;
+        height: 35px;
     }
     .tries-div{
-        height: 45px;
+        height: 35px;
     }
     p{
         font-size: 20px;
@@ -140,7 +181,7 @@ p{
 }
 .morty{
     width: 16%;
-    position: absolute;
+    position: fixed;
     right: 0;
     bottom: 0;
     z-index: -1;
@@ -148,9 +189,68 @@ p{
 }
 .rick{
     width: 16%;
-    position: absolute;
+    position: fixed;
     left: 0;
     bottom: 0;
     z-index: -1;
     padding: 0 5px;
 }
+
+
+/* Popup container */
+.popup {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* The actual popup (appears on top) */
+  .popup .popuptext {
+    visibility: hidden;
+    width: 300px;
+    background-color: rgb(32, 32, 32);
+    border: 1px solid rgb(40, 176, 255);
+    color: rgb(40, 176, 255);
+    text-align: center;
+    font-size: 20px;
+    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: -60px;
+    margin-left: -80px;
+  }
+  
+  /* Popup arrow */
+  .popup .popuptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    border-width: 5px;
+    border-style: solid;
+    border-color: rgb(78, 190, 255) transparent transparent transparent;
+  }
+  
+  /* Toggle this class when clicking on the popup container (hide and show the popup) */
+  .popup .show {
+    visibility: visible;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s
+  }
+  
+  /* Add animation (fade in the popup) */
+  @-webkit-keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+  }
+  
+  @keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+  }
